@@ -1,12 +1,15 @@
 package com.sh.engine.model.upload;
 
+import com.google.common.collect.ImmutableMap;
 import com.microsoft.playwright.*;
 import com.microsoft.playwright.options.Cookie;
-import com.microsoft.playwright.options.WaitUntilState;
+import com.sh.config.manager.CacheManager;
 import com.sh.config.manager.ConfigFetcher;
-import com.sh.engine.model.record.Recorder;
+import com.sh.config.utils.PictureFileUtil;
+import com.sh.message.service.MsgSendService;
 import lombok.extern.slf4j.Slf4j;
 
+import javax.annotation.Resource;
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayInputStream;
@@ -16,6 +19,7 @@ import java.io.InputStream;
 import java.nio.file.Paths;
 import java.util.Base64;
 import java.util.List;
+import java.util.Map;
 
 /**
  * @Author caiwen
@@ -23,13 +27,23 @@ import java.util.List;
  **/
 @Slf4j
 public class DouyinUploader extends Uploader {
+    @Resource
+    private CacheManager cacheManager;
+    @Resource
+    private MsgSendService msgSendService;
+
+    private static final String AUTH_CODE_KEY = "douyin_login_authcode";
+
     public DouyinUploader(String uploadedDir, String metaDataDir) {
         super(uploadedDir, metaDataDir);
     }
 
     @Override
     public void setUp() {
-
+        boolean isValid = checkAccountValid();
+        if (!isValid) {
+            genCookies();
+        }
     }
 
     @Override
@@ -38,6 +52,10 @@ public class DouyinUploader extends Uploader {
     }
 
     private void genCookies() {
+        String accountSavePath = ConfigFetcher.getInitConfig().getAccountSavePath();
+        File accountFile = new File(accountSavePath, "douyin_accout.json");
+
+
         try (Playwright playwright = Playwright.create()) {
             // 启动 Chromium 浏览器，非无头模式
             Browser browser = playwright.chromium().launch(new BrowserType.LaunchOptions().setHeadless(false));
@@ -45,15 +63,16 @@ public class DouyinUploader extends Uploader {
             BrowserContext context = browser.newContext();
             // 创建一个新的页面
             Page page = context.newPage();
-
             // 访问指定的 URL
             page.navigate("https://creator.douyin.com/", new Page.NavigateOptions().setTimeout(20000));
 
-            // 查找二维码元素并获取其 src 属性并保存
+            // 查找二维码元素并获取其 src 属性
             Locator imgElement = page.locator("div.account-qrcode-QvXsyd div.qrcode-image-QrGzx7 img:first-child");
             imgElement.waitFor(new Locator.WaitForOptions().setTimeout(10000));
             String imgElementSrc = imgElement.getAttribute("src");
-            saveBase64Image(imgElementSrc);
+
+            // 保存二维码图片
+            File qrCodeFile = PictureFileUtil.saveBase64Image(imgElementSrc);
 
             int num = 1;
             while (true) {
@@ -72,17 +91,19 @@ public class DouyinUploader extends Uploader {
                     page.locator("text=接收短信验证").click();
                     Thread.sleep(1000);
                     page.locator("text=获取验证码").click();
+                    msgSendService.sendText("需要进行验证码验证，验证码已发出，请在60s内在微应用回复验证码");
 
                     int numTwo = 1;
                     while (true) {
                         Thread.sleep(3000);
                         // 检查缓存中是否有验证码
-                        String authNumber = cacheGetData("douyin_login_authcode_" + queueId);
+                        String authNumber = (String) cacheManager.get(AUTH_CODE_KEY);
                         if (authNumber != null) {
                             page.locator("input[placeholder='请输入验证码']").nth(1).fill(authNumber);
-                            page.locator("text=验证", new Locator.ClickOptions().setExact(true)).click();
+                            page.locator("text=验证").filter(new Locator.FilterOptions().setHasText("验证")).click();
                             Thread.sleep(2000);
-                            cacheDelete("douyin_login_need_auth_" + queueId);
+
+                            cacheManager.delete("douyin_login_need_auth");
                             break;
                         }
                         if (numTwo > 20) {
@@ -106,61 +127,22 @@ public class DouyinUploader extends Uploader {
                 // 获取用户信息
                 String thirdIdCont = page.locator("text=抖音号：").innerText();
                 String thirdId = thirdIdCont.split("：")[1];
-                userInfo = Map.of(
+                userInfo = ImmutableMap.of(
                         "account_id", thirdId, // 抖音号
                         "username", page.locator("div.rNsML").innerText(), // 用户名
                         "avatar", page.locator("div.t4cTN img").first().getAttribute("src") // 头像
                 );
-                String accountFile = accountFilePath + "/" + accountId + "_" + thirdId + "_account.json";
                 // 保存 cookie 到文件
-                context.storageState(new BrowserContext.StorageStateOptions().setPath(Paths.get(accountFile)));
-                // 缓存当前登录状态
-                cacheData("douyin_login_status_" + accountId, 1, 60); // 60 秒
-                cacheData("douyin_login_status_third_" + accountId + "_" + thirdId, 1, 604800); // 一周
+                context.storageState(new BrowserContext.StorageStateOptions().setPath(Paths.get(accountFile.getAbsolutePath())));
             }
 
             // 关闭浏览器
             context.close();
             browser.close();
-            return userInfo;
         } catch (Exception e) {
-            e.printStackTrace();
-            return null;
+            log.error("Failed to genCookies, path: {}", accountFile.getAbsolutePath(), e);
         }
     }
-
-    // 保存 base64 字符串为本地图片文件
-    public static void saveBase64Image(String base64Image) {
-        String accountSavePath = ConfigFetcher.getInitConfig().getAccountSavePath();
-
-        try {
-            // 去掉 Base64 字符串的前缀（如果有，如 "data:image/png;base64,"）
-            if (base64Image.startsWith("data:image")) {
-                base64Image = base64Image.substring(base64Image.indexOf(",") + 1);
-            }
-
-            // 将 Base64 字符串解码为字节数组
-            byte[] imageBytes = Base64.getDecoder().decode(base64Image);
-
-            // 将字节数组转换为输入流
-            InputStream inputStream = new ByteArrayInputStream(imageBytes);
-
-            // 读取输入流为 BufferedImage
-            BufferedImage bufferedImage = ImageIO.read(inputStream);
-
-            // 创建输出文件
-            File outputFile = new File(accountSavePath, "douyin_login_qrcode.png");
-
-            // 将 BufferedImage 保存为本地文件
-            ImageIO.write(bufferedImage, "png", outputFile);
-            log.info("Image saved successfully to: {}", outputFile.getAbsolutePath());
-        } catch (IOException e) {
-            log.error("Failed to save image: {}", accountSavePath, e);
-            System.err.println("Failed to save image: " + e.getMessage());
-        }
-    }
-
-
 
     private boolean checkAccountValid() {
         String accountSavePath = ConfigFetcher.getInitConfig().getAccountSavePath();
@@ -169,18 +151,13 @@ public class DouyinUploader extends Uploader {
             return false;
         }
 
-        // 使用 Playwright
         try (Playwright playwright = Playwright.create()) {
-            // 启动无头浏览器
             Browser browser = playwright.chromium().launch(new BrowserType.LaunchOptions().setHeadless(true));
-            // 从已有的 cookie 文件中加载浏览器上下文
             Browser.NewContextOptions contextOptions = new Browser.NewContextOptions()
                     .setStorageStatePath(Paths.get(accountFile.getAbsolutePath()));
             BrowserContext context = browser.newContext(contextOptions);
 
-            // 创建一个新的页面
             Page page = context.newPage();
-            // 访问指定的 URL
             page.navigate("https://creator.douyin.com/creator-micro/content/upload");
 
             try {
